# qBittorrent-Tracker-Auto-Updater

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: build-docker-image.yml
src/: config.py  log.py  main.py  qbittorrent.py  request.py  tracker.py  utils.py
