[project]
name = "qbittorrent-tracker-auto-updater"
version = "0.1.0"
description = "qBittorrent Automatically Updates Trackers"
readme = "README.md"
requires-python = ">=3.12.1"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "qbittorrent-api>=2026.6.0",
]
